<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="screen"
    android:foregroundGravity="center"
    app:flow_horizontalAlign="center"
    app:flow_verticalAlign="center"
    app:layout_anchorGravity="center">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape_border"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="add"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:text="@string/restart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonLvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/shape"
            android:text="@string/main_page"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="-50dp"
        android:rotation="-25"
        android:src="@drawable/card_1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-50dp"
        android:rotation="-25"
        android:src="@drawable/card_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-50dp"
        android:rotation="25"
        android:src="@drawable/card_4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="32dp"
        android:rotation="25"
        android:src="@drawable/card_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>