<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".game.GalleryActivity">

    <LinearLayout
        android:id="@+id/layout_container_clicker"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/blue_darker"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back_gallery"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:foregroundGravity="left"
            android:src="@drawable/baseline_arrow_back_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_container_clicker"
        app:layout_constraintWidth_max="wrap">


        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp">


                <ImageView
                    android:id="@+id/imageViewGallery1"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#D3131313"
                    android:backgroundTintMode="add"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/level_1" />

                <Button
                    android:id="@+id/buttonGallery1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape"
                    android:elevation="2dp"
                    android:paddingStart="60dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="60dp"
                    android:paddingBottom="20dp"
                    android:text="@string/girl_from_level_1"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewGallery1" />


                <ImageView
                    android:id="@+id/imageViewGallery2"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonGallery1"
                    app:srcCompat="@drawable/level_2" />

                <Button
                    android:id="@+id/buttonGallery2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/shape"
                    android:elevation="2dp"
                    android:paddingStart="60dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="60dp"
                    android:paddingBottom="20dp"
                    android:text="@string/girl_from_level_2"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewGallery2" />

                <ImageView
                    android:id="@+id/imageViewGallery3"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonGallery2"
                    app:srcCompat="@drawable/level_3" />


                <Button
                    android:id="@+id/buttonGallery3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/shape"
                    android:elevation="2dp"
                    android:paddingStart="60dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="60dp"
                    android:paddingBottom="20dp"
                    android:text="@string/girl_from_level_3"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewGallery3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>